--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <section class="container">
         <div class="row row-cols-1 row-cols-md-3 g-4" id="card-container"></div>
 
+        <!-- see more button section -->
         <section class="mb-2">
           <div
             class="d-flex flex-column justify-content-center align-items-center mt-4"
