--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <!-- loading -->
 
       <section>
-        <div id="spinner" class="spinner"></div>
+        <div id="spinner" class="loader "></div>
       </section>
     </main>
 
